# nba-dfs-stats-lab

./: .gitignore  .worktreeinclude  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/skills/codebase-doc-refresh/: SKILL.md
.gemini/: config.yaml
.github/workflows/: claude-auto-pr-once.yml  claude-auto-pr-review.yml  claude.yml
docs/: ingestion-plan.md
scripts/: verify_gates.py
src/nba_dfs_stats_lab/: __init__.py  config.py
src/nba_dfs_stats_lab/db/: connection.py  schema.py  writers.py
src/nba_dfs_stats_lab/ingest/: filenames.py  projections.py  schemas.py
tests/: test_db.py  test_filenames.py  test_projections.py  test_schemas.py  test_smoke.py
