[project]
name = "nba-dfs-stats-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JonnyRank", email = "jonathandrankin@gmail.com" }
]
requires-python = ">=3.14.2"
dependencies = [
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
