[project]
name = "nba-dfs-stats-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JonnyRank", email = "jonathandrankin@gmail.com" }
]
# >=3.13 (not >=3.14.2) so cloud sessions can fall back to the image's system
# Python 3.13 when the network policy blocks uv's managed-Python downloads.
# Local dev still targets 3.14.2 via .python-version.
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
# Vendored Claude Code skill scripts aren't project code.
extend-exclude = [".claude"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
